--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,47 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bowlingApp
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-#spring.jpa.show-sql: true
-
-
-#spring:
-#  profiles:
-#    active: dev
-#    include:
-#      - swagger
-#      # Uncomment to activate TLS for the dev profile
-#      #- tls
-#  devtools:
-#    restart:
-#      enabled: true
-#    livereload:
-#      enabled: false # we use Webpack dev server + BrowserSync for livereload
-#  datasource:
-#    type: com.zaxxer.hikari.HikariDataSource
-#    url: jdbc:mysql://localhost:3306/bowlingApp?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-#    username: root
-#    password: root
-#    hikari:
-#      poolName: Hikari
-#      auto-commit: false
-#      data-source-properties:
-#        cachePrepStmts: true
-#        prepStmtCacheSize: 250
-#        prepStmtCacheSqlLimit: 2048
-#        useServerPrepStmts: true
-#  jpa:
-#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-#    database: MYSQL
-#    show-sql: true
-#    properties:
-#      hibernate.id.new_generator_mappings: true
-#      hibernate.connection.provider_disables_autocommit: true
-#      hibernate.cache.use_second_level_cache: false
-#      hibernate.cache.use_query_cache: false
-#      hibernate.generate_statistics: false
-#  liquibase:
-#    # Remove 'faker' if you do not want the sample data to be loaded automatically
-#    contexts: dev
-#    
-#server:
-#  port: 8080
+spring.jpa.show-sql: true
